# msc-sdk

./: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
msc_sdk/: commons.py  config_sdk.py  enums.py  errors.py
msc_sdk/authenticate/: __init__.py  authenticate.py  credential.py
msc_sdk/contract/: __init__.py  contract.py  ownership_assignment.py  warranty.py
msc_sdk/position/: __init__.py  position.py
msc_sdk/recurrence/: __init__.py  operation.py  recurrence.py  rru.py
msc_sdk/utils/: api_tools.py  converters.py  validators.py
tests/integration/: conftest.py  test_authenticate.py  test_contract.py  test_credential.py  test_position.py  test_recurrence.py
tests/unit/: conftest.py  test_authenticate.py  test_contract.py  test_credential.py  test_position.py  test_recurrence.py
