[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "1.0.0"
name = "msc-sdk"
authors = [{name = "Salomão Garbim", email = "salomao.garbim@simplesdecredito.com.br"}]
description = "SDK for MSC API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.6.4",
    "cachetools>=5.3.3",
    "pytest>=8.1.1",
    "requests-mock>=1.11.0"
]

[tool.setuptools]
py-modules = ["msc_sdk"]
